# NBA-ML-Model-Alert-System

./: .env.example  .gitignore  CLAUDE_START_HERE.md  PRD.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  injuries_sync.yml  keepalive.yml  odds_poll.yml  reconcile.yml  stats_sync.yml
alembic/: env.py
alembic/versions/: d3f8a7b2c1e9_initial_schema.py
src/alerts/: telegram.py
src/api/: app.py  deps.py  schemas.py
src/api/routes/: clv.py  (+5 more)
src/backtest/: engine.py
src/config/: settings.py
src/db/: models.py  session.py
src/edge/: devig.py  ev.py
src/features/: builder.py  odds_features.py  player_features.py  team_features.py
src/ingestion/: injuries.py  nba_stats.py  odds.py
src/models/: elo.py  moneyline.py  props.py
src/scheduler/: slate.py
src/scripts/: clv_report.py  ingest_injuries.py  ingest_odds.py  ingest_stats.py  reconcile.py
src/tracker/: live_clv.py  reconcile.py
tests/: test_api_alerts.py  test_api_backtest.py  test_api_clv.py  test_api_health.py  test_api_rate_limit.py  test_api_stream.py  test_api_today.py  test_backtest.py  test_clv_report.py  test_db_schema.py  test_devig.py  test_elo.py  test_ev.py  test_features.py  test_hello.py  test_ingestion_injuries.py  test_ingestion_nba_stats.py  test_ingestion_odds.py  test_live_clv.py  test_moneyline.py  test_props.py  test_reconcile.py  test_slate.py  test_telegram.py
web/: .env.local.example  next.config.mjs  package-lock.json  package.json
web/app/: error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/lib/: types.ts
(+16 files in other folders)
