[project]
name = "nba-ev-alert-system"
version = "0.1.0"
description = "NBA +EV Alert System — portfolio ML pipeline + FastAPI + Next.js dashboard"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "statsmodels>=0.14",
    "shap>=0.46",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "pydantic-settings>=2.3",
    "structlog>=24.2",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests register @compiles(BigInteger, "sqlite") before src imports — E402 is intentional.
"tests/*.py" = ["E402"]
